--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Connyr Aungst — Cybersecurity Portfolio</title>
+  <title><span class="no-wrap">Connyr Aungst</span> — Cybersecurity Portfolio</title>
   <meta name="description" content="Hands-on cybersecurity projects with screenshots, write-ups, and downloadable PDFs." />
   <link rel="icon" href="favicon.jpg" />
   <link rel="stylesheet" href="style.css?v=6.3" />
@@ -13,7 +13,7 @@
 <header class="topbar">
   <div class="brand">
     <img src="assets/images/logo/ca.webp" alt="CA Logo" class="logo"/>
-    <div class="name"><span><span class="brand-name">Connyr Aungst</span></div>
+    <div class="name"><span><span class="brand-name"><span class="no-wrap">Connyr Aungst</span></span></div>
   </div>
   <nav class="nav">
     <div class="nav-item has-dropdown"><a href="#stats">Stats</a>
@@ -45,15 +45,20 @@
 <section id="hero" class="hero center">
   <div class="hero-inner center">
     <div class="hero-text">
-      <h1>Connyr Aungst</h1>
+      <div class="hero-center">
+<h1><span class="no-wrap">Connyr Aungst</span></h1>
       <p class="tagline">Cybersecurity Portfolio · Blue & Red Team · Cloud · Automation</p>
       <div class="hero-links">
         <a class="btn" href="#general">View Projects</a>
         <a class="btn outline" href="#certs">Certifications</a>
       </div>
+<section id="cf-stats" class="section-center"></section>
+
     </div>
-    <picture class="hero-headshot"><source srcset="assets/images/headshot.webp" type="image/webp"><img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="eager"></picture>
+    <picture class="hero-headshot"><source srcset="assets/images/headshot.webp" type="image/webp"><img src="assets/images/headshot.jpg" alt="<span class="hero-headshot hero-lg no-wrap">
+</div>Connyr Aungst</span> headshot" loading="eager"></picture>
   </div>
+</div>
 </section>
 
 <section class="chipbar">
@@ -112,10 +117,11 @@
   
   <section id="about" class="section">
     <h2>About Me</h2>
+<div class="about-split">
     <div class="about-card">
       <picture class="about-photo">
         <source srcset="assets/images/headshot.webp" type="image/webp">
-        <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="lazy">
+        <img src="assets/images/headshot.jpg" alt="<span class="no-wrap">Connyr Aungst</span> headshot" loading="lazy">
       </picture>
       <div class="about-body">
         <p>Cybersecurity practitioner with interests across blue/red operations, vuln management/testing, incident response, and cloud security.</p>
@@ -141,7 +147,7 @@
   </section>
 
   <footer id="contact" class="footer">
-    <p>© <span id="year"></span> Connyr Aungst · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
+    <p>© <span id="year"></span> <span class="no-wrap">Connyr Aungst</span> · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
   </footer>
 </main>
 
