fix: clean HTML/CSS, repair CF GraphQL, hydrate stats; verify image paths

--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
         <a class="btn" href="#general">View Projects</a>
         <a class="btn outline" href="#certs">Certifications</a>
       </div>
-<section id="cf-stats" class="section-center"></section>
-
     </div>
-    <picture class="hero-headshot"><source srcset="assets/images/headshot.webp" type="image/webp"><img src="assets/images/headshot.jpg" alt="<span class="hero-headshot hero-lg no-wrap">
-</div>Connyr Aungst</span> headshot" loading="eager"></picture>
+    <picture class="hero-headshot"><source srcset="assets/images/headshot.webp" type="image/webp"><img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="eager" class="hero-headshot hero-lg"></picture>
   </div>
 </div>
 </section>
@@ -82,7 +79,7 @@
     <div class="cards">
       <article class="card">
         <h3>Cloudflare Link</h3>
-        <div id="cfStatus">Checking...</div>
+        <div id="cfStatus">Checking</div>
         <small>Live analytics connection</small>
       </article>
       <article class="card">
@@ -147,7 +144,10 @@
   </section>
 
   <footer id="contact" class="footer">
-    <p>© <span id="year"></span> <span class="no-wrap">Connyr Aungst</span> · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
+    <p>© <span id="year"></span> <span class="no-wrap">Connyr Aungst</span> · 
+      <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · 
+      <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · 
+      <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
   </footer>
 </main>
 
