--- a/index.html
+++ b/index.html
@@ -3,153 +3,78 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><span class="no-wrap">Connyr Aungst</span> — Cybersecurity Portfolio</title>
+  <title>Connyr Aungst — Cybersecurity Portfolio</title>
   <meta name="description" content="Hands-on cybersecurity projects with screenshots, write-ups, and downloadable PDFs." />
   <link rel="icon" href="favicon.jpg" />
-  <link rel="stylesheet" href="style.css?v=6.3" />
-  <script defer src="app.js?v=6.3"></script>
+  <link rel="stylesheet" href="style.css?v=7.0" />
+  <script defer src="app.js?v=7.0"></script>
 </head>
 <body>
 <header class="topbar">
   <div class="brand">
     <img src="assets/images/logo/ca.webp" alt="CA Logo" class="logo"/>
-    <div class="name"><span><span class="brand-name"><span class="no-wrap">Connyr Aungst</span></span></div>
+    <div class="name"><span class="brand-name no-wrap">Connyr Aungst</span><small>Cybersecurity • IT</small></div>
   </div>
   <nav class="nav">
-    <div class="nav-item has-dropdown"><a href="#stats">Stats</a>
-      <div class="dropdown">
-        <a href="#stats">Overview</a>
-        <a href="#stats">Top Countries</a>
-        <a href="#stats">Rate Limited</a>
-      </div>
-    </div>
+    <a class="nav-item" href="#stats">Stats</a>
+    <a class="nav-item" href="#general">General</a>
+    <a class="nav-item" href="#security">Security</a>
     <a class="nav-item" href="#about">About</a>
-    <a class="nav-item" href="#certs">Certifications</a>
-    <div class="nav-item has-dropdown"><a href="#general">General Projects</a>
-      <div class="dropdown" id="generalMenu"></div>
-    </div>
-    <div class="nav-item has-dropdown"><a href="#security">Security Projects</a>
-      <div class="dropdown" id="securityMenu"></div>
-    </div>
-    <div class="nav-item has-dropdown"><a href="#contact">Contact</a>
-      <div class="dropdown">
-        <a href="mailto:you@connyraungst.com" target="_blank">Email</a>
-        <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a>
-      </div>
-    </div>
   </nav>
 </header>
 
-
-<section id="hero" class="hero center">
-  <div class="hero-inner center">
-    <div class="hero-text">
-      <div class="hero-center">
-<h1><span class="no-wrap">Connyr Aungst</span></h1>
-      <p class="tagline">Cybersecurity Portfolio · Blue & Red Team · Cloud · Automation</p>
-      <div class="hero-links">
-        <a class="btn" href="#general">View Projects</a>
-        <a class="btn outline" href="#certs">Certifications</a>
-      </div>
-    </div>
-    <picture class="hero-headshot"><source srcset="assets/images/headshot.webp" type="image/webp"><img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="eager" class="hero-headshot hero-lg"></picture>
-  </div>
-</div>
-</section>
-
-<section class="chipbar">
-
-  <button class="chip" data-filter="All">All</button>
-  <button class="chip" data-filter="Web">Web</button>
-  <button class="chip" data-filter="Cloud">Cloud</button>
-  <button class="chip" data-filter="Security — Offense">Security — Offense</button>
-  <button class="chip" data-filter="Security — Defense">Security — Defense</button>
-  <button class="chip" data-filter="Networking">Networking</button>
-  <button class="chip" data-filter="Scripting">Scripting</button>
-  <button class="chip" data-filter="Governance">Governance</button>
-  <button class="chip" data-filter="Tooling/DevOps">Tooling/DevOps</button>
-  <button class="chip" data-filter="Misc">Misc</button>
-</section>
 <main class="wrap">
-
-  
-  <section id="stats" class="section">
-    <h2>Site Statistics</h2>
-    <div class="cards">
-      <article class="card">
-        <h3>Cloudflare Link</h3>
-        <div id="cfStatus">Checking</div>
-        <small>Live analytics connection</small>
-      </article>
-      <article class="card">
-        <h3>HTTPS</h3>
-        <div id="httpsState">—</div>
-        <small>This visit</small>
-      </article>
-      <article class="card">
-        <h3>Security Headers</h3>
-        <div class="pill-list" id="secHeaders"></div>
-        <small>CSP, HSTS, XFO, XCTO, Referrer, Permissions</small>
-      </article>
-      <article class="card">
-        <h3>Cache Status</h3>
-        <div id="cacheStatus">—</div>
-        <small>style.css via Cloudflare</small>
-      </article>
-      <article class="card">
-        <h3>Top Countries (24h)</h3>
-        <div id="topCountries">—</div>
-        <small>Requests by Country</small>
-      </article>
-      <article class="card">
-        <h3>Rate Limited (24h)</h3>
-        <div id="rateLimited">—</div>
-        <small>Firewall/Rate Limiting events</small>
-      </article>
-    </div>
+  <section id="hero" class="hero section-center">
+    <h1>Cybersecurity Portfolio</h1>
+    <p class="muted">Blue‑team & red‑team labs, projects, and notes.</p>
+    <picture>
+      <source type="image/webp" srcset="assets/images/headshot.webp" />
+      <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" class="hero-headshot hero-lg" />
+    </picture>
   </section>
 
+  <section id="stats" class="grid-3">
+    <article class="card">
+      <h3>Cloudflare Link</h3>
+      <div id="cfStatus">Checking...</div>
+      <small>Live analytics connection</small>
+    </article>
+    <article class="card">
+      <h3>Top Countries (24h)</h3>
+      <div id="topCountries" class="chips"></div>
+    </article>
+    <article class="card">
+      <h3>Rate Limited (24h)</h3>
+      <div id="rateLimited" class="chips"></div>
+    </article>
+  </section>
 
-  
-  <section id="about" class="section">
+  <section id="general">
+    <h2>General Projects</h2>
+    <div id="generalProjects" class="cards"></div>
+  </section>
+
+  <section id="security">
+    <h2>Security Projects</h2>
+    <div id="securityProjects" class="cards"></div>
+  </section>
+
+  <section id="about">
     <h2>About Me</h2>
-<div class="about-split">
-    <div class="about-card">
-      <picture class="about-photo">
-        <source srcset="assets/images/headshot.webp" type="image/webp">
-        <img src="assets/images/headshot.jpg" alt="<span class="no-wrap">Connyr Aungst</span> headshot" loading="lazy">
-      </picture>
-      <div class="about-body">
-        <p>Cybersecurity practitioner with interests across blue/red operations, vuln management/testing, incident response, and cloud security.</p>
+    <div class="about-split">
+      <div class="about-image">
+        <img src="assets/images/headshot.jpg" alt="Connyr Aungst" class="about-headshot" />
+      </div>
+      <div class="about-text">
+        <p>I'm an IT/Cybersecurity professional building out both blue‑team and red‑team projects. This portfolio showcases hands‑on work, certifications, and write‑ups. Explore the projects below and reach out if you'd like to collaborate.</p>
       </div>
     </div>
   </section>
-
-
-  <section id="certs" class="section">
-    <h2>Certifications</h2>
-    <div id="certifications" class="grid"></div>
-  </section>
-
-  <section id="general" class="section">
-    <h2>General Projects</h2>
-    <div id="projects-general" class="grid"></div>
-    <div id="projects-general-error" class="error"></div>
-  </section>
-
-  <section id="security" class="section">
-    <h2>Security Projects</h2>
-    <div id="projects-security" class="grid"></div>
-  </section>
-
-  <footer id="contact" class="footer">
-    <p>© <span id="year"></span> <span class="no-wrap">Connyr Aungst</span> · 
-      <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · 
-      <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · 
-      <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
-  </footer>
 </main>
+
+<footer class="footer section-center">
+  <div class="muted">© <span id="year"></span> Connyr Aungst — <a href="mailto:you@connyraungst.com">you@connyraungst.com</a></div>
+</footer>
 
 <div id="lightbox" class="lightbox" aria-hidden="true">
   <button class="lightbox-close" aria-label="Close">×</button>
