feat: v33 — header logo dedup/size, Contact link, headshot path, stats hydration, section order

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<!doctype html>
+<section id="about">
+    <h2>About Me</h2>
+    <div class="about-split">
+      <div class="about-image">
+        <img src="assets/images/headshot.jpg" alt="Connyr Aungst" class="about-headshot" />
+      </div>
+      <div class="about-text">
+        <p>I'm an IT/Cybersecurity professional building out both blue‑team and red‑team projects. This portfolio showcases hands‑on work, certifications, and write‑ups. Explore the projects below and reach out if you'd like to collaborate.</p>
+      </div>
+    </div>
+  </section><!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -12,7 +22,7 @@
 <body>
 <header class="topbar"><img src="assets/images/logo-ca.webp" class="brand-logo" alt="Logo" />
   <div class="brand">
-    <img src="assets/images/logo/ca.webp" alt="CA Logo" class="logo"/>
+    
     <div class="name"><span class="brand-name no-wrap">Connyr Aungst</span><small>Cybersecurity • IT</small></div>
   </div>
   <nav class="nav">
@@ -31,7 +41,7 @@
       <source type="image/webp" srcset="assets/images/headshot.webp" />
       <picture>
   <source srcset="assets/images/headshot.webp" type="image/webp">
-  <img class="hero-headshot hero-lg" src="assets/images/headshot.jpg" alt="Connyr Aungst headshot">
+  <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" class="hero-headshot hero-lg">
 </picture>
     </picture>
   </section>
@@ -62,17 +72,7 @@
     <div id="securityProjects" class="cards"></div>
   </section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <div class="about-split">
-      <div class="about-image">
-        <img src="assets/images/headshot.jpg" alt="Connyr Aungst" class="about-headshot" />
-      </div>
-      <div class="about-text">
-        <p>I'm an IT/Cybersecurity professional building out both blue‑team and red‑team projects. This portfolio showcases hands‑on work, certifications, and write‑ups. Explore the projects below and reach out if you'd like to collaborate.</p>
-      </div>
-    </div>
-  </section>
+  
 </main>
 
 <footer class="footer section-center">
