--- a/index.html
+++ b/index.html
@@ -1,94 +1,80 @@
-<section id="about">
-    <h2>About Me</h2>
-    <div class="about-split">
-      <div class="about-image">
-        <img src="assets/images/headshot.jpg" alt="Connyr Aungst" class="about-headshot" />
-      </div>
-      <div class="about-text">
-        <p>I'm an IT/Cybersecurity professional building out both blue‑team and red‑team projects. This portfolio showcases hands‑on work, certifications, and write‑ups. Explore the projects below and reach out if you'd like to collaborate.</p>
-      </div>
-    </div>
-  </section><!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Connyr Aungst — Cybersecurity Portfolio</title>
-  <meta name="description" content="Hands-on cybersecurity projects with screenshots, write-ups, and downloadable PDFs." />
-  <link rel="icon" href="favicon.jpg" />
-  <link rel="stylesheet" href="style.css?v=7.0" />
-  <script defer src="app.js?v=7.0"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Connyr Aungst</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="topbar"><img src="assets/images/logo-ca.webp" class="brand-logo" alt="Logo" />
-  <div class="brand">
-    
-    <div class="name"><span class="brand-name no-wrap">Connyr Aungst</span><small>Cybersecurity • IT</small></div>
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="brand">
+      <img src="assets/images/logo-ca.webp" onerror="this.onerror=null;this.src='assets/images/logo-ca.jpg';" class="site-logo" alt="CA logo">
+      <div class="site-name">Connyr Aungst</div>
+    </div>
+    <ul class="nav" id="top-nav">
+      <li><a href="#stats">Site Statistics</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#general">General Projects</a><div class="dropdown" id="dd-general"></div></li>
+      <li><a href="#security">Security Projects</a><div class="dropdown" id="dd-security"></div></li>
+      <li><a href="#contact">Contact</a><div class="dropdown" id="dd-contact">
+        <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/caungst38" target="_blank" rel="noopener">GitHub</a>
+        <a href="mailto:you@connyraungst.com" target="_blank" rel="noopener">Email</a>
+      </div></li>
+    </ul>
   </div>
-  <nav class="nav">
-    <a class="nav-item" href="#stats">Stats</a>
-    <a class="nav-item" href="#general">General</a>
-    <a class="nav-item" href="#security">Security</a>
-    <a class="nav-item" href="#about">About</a>
-  </nav>
 </header>
 
-<main class="wrap">
-  <section id="hero" class="hero section-center">
-    <h1>Cybersecurity Portfolio</h1>
-    <p class="muted">Blue‑team & red‑team labs, projects, and notes.</p>
+<main class="container">
+  <section class="hero" id="hero">
+    <h1 class="portfolio">Cybersecurity Portfolio</h1>
     <picture>
-      <source type="image/webp" srcset="assets/images/headshot.webp" />
-      <picture>
-  <source srcset="assets/images/headshot.webp" type="image/webp">
-  <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" class="hero-headshot hero-lg">
-</picture>
+      <source srcset="assets/images/headshot.webp" type="image/webp">
+      <img src="assets/images/headshot.jpg" class="headshot" alt="Connyr Aungst headshot">
     </picture>
+    <div class="name">Connyr Aungst</div>
+    <div class="subtitle">Blue/Red Team Ops – Cloud Security – Network Security – Incident Response</div>
   </section>
 
-  <section id="stats" class="grid-3">
-    <article class="card">
-      <h3>Cloudflare Link</h3>
-      <div id="cfStatus">Checking...</div>
-      <small>Live analytics connection</small>
-    </article>
-    <article class="card">
-      <h3>Top Countries (24h)</h3>
-      <div id="topCountries" class="chips"></div>
-    </article>
-    <article class="card">
-      <h3>Rate Limited (24h)</h3>
-      <div id="rateLimited" class="chips"></div>
-    </article>
+  <section class="section" id="stats">
+    <h2 class="section-title-left">Site Statistics</h2>
+    <div class="cards">
+      <div class="card" id="card-browser"><h3>Browser</h3><div class="stat" data-fill="browser">—</div></div>
+      <div class="card" id="card-device"><h3>Device</h3><div class="stat" data-fill="device">—</div></div>
+      <div class="card" id="card-https"><h3>Encryption</h3><div class="stat"><span class="lock" data-fill="lock">🔒</span> <span data-fill="https">—</span></div></div>
+      <div class="card" id="card-headers"><h3>HTTP Security Headers</h3><div class="stat" data-fill="headers">—</div></div>
+      <div class="card" id="card-reqs"><h3>Requests Served This Week</h3><div class="stat" data-fill="requests_week">—</div></div>
+      <div class="card" id="card-waf"><h3>Blocked (WAF)</h3><div class="stat" data-fill="waf_blocked">—</div></div>
+      <div class="card" id="card-lighthouse"><h3>Lighthouse</h3><div class="stat" data-fill="lighthouse">Connect Netlify API</div></div>
+      <div class="card" id="card-countries"><h3>Top Countries (30d)</h3><div class="stat" data-fill="countries">—</div></div>
+    </div>
   </section>
 
-  <section id="general">
-    <h2>General Projects</h2>
-    <div id="generalProjects" class="cards"></div>
+  <section class="section" id="about">
+    <h2 class="section-title-left">About Me</h2>
+    <div class="card about-card">
+      <img src="assets/images/headshot.jpg" alt="Connyr Aungst">
+      <div><p>Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.</p></div>
+    </div>
   </section>
 
-  <section id="security">
-    <h2>Security Projects</h2>
-    <div id="securityProjects" class="cards"></div>
+  <section class="section" id="general">
+    <h2 class="section-title-left">General Projects</h2>
+    <div class="projects-grid" id="general-grid"></div>
   </section>
 
-  
+  <section class="section" id="security">
+    <h2 class="section-title-left">Security Projects</h2>
+    <div class="projects-grid" id="security-grid"></div>
+  </section>
 </main>
 
-<footer class="footer section-center">
-  <div class="muted">© <span id="year"></span> Connyr Aungst — <a href="mailto:you@connyraungst.com">you@connyraungst.com</a></div>
-<span class="footer-links"> | <a href="https://www.linkedin.com/in/connyraungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/caungst38" target="_blank" rel="noopener">GitHub</a> · <a href="mailto:you@connyraungst.com">Email</a></span></footer>
+<footer class="footer" id="contact">
+  <div>© 2025 Connyr Aungst · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/caungst38" target="_blank" rel="noopener">GitHub</a></div>
+</footer>
 
-<div id="lightbox" class="lightbox" aria-hidden="true">
-  <button class="lightbox-close" aria-label="Close">×</button>
-  <img id="lightboxImage" alt="Project screenshot" src="" />
-  <div id="lightboxCaption" class="caption"></div>
-  <div class="lb-actions">
-    <a id="lightboxPdf" class="btn" href="#" target="_blank" rel="noopener" hidden>Download Summary PDF</a>
-    <a id="lightboxRepo" class="btn outline" href="#" target="_blank" rel="noopener" hidden>View Code</a>
-  </div>
-</div>
-
-<noscript>This site uses a little JavaScript to render cards and stats. Please enable JS.</noscript>
+<script src="app.js"></script>
 </body>
 </html>
