--- a/index.html
+++ b/index.html
@@ -1,178 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Connyr Aungst — Cybersecurity Portfolio</title>
-  <meta name="description" content="Hands-on cybersecurity projects with screenshots, write-ups, and downloadable PDFs." />
-  <link rel="icon" href="favicon.jpg" />
-  <link rel="stylesheet" href="style.css?v=6.3" />
-  <script defer src="app.js?v=6.3"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Connyr Aungst — Portfolio</title>
+  <link rel="preload" as="image" href="assets/images/headshot.jpg">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="topbar">
-  <div class="brand">
-    <img src="assets/images/logo/ca.webp" alt="CA Logo" class="logo"/>
-    <div class="name"><span><span class="brand-name">Connyr Aungst</span></div>
-  </div>
-  <nav class="nav">
-    <div class="nav-item has-dropdown"><a href="#stats">Stats</a>
-      <div class="dropdown">
-        <a href="#stats">Overview</a>
-        <a href="#stats">Top Countries</a>
-        <a href="#stats">Rate Limited</a>
-      </div>
+  <header class="site-header">
+    <div class="brand">
+      <img src="assets/images/logo-ca.webp" alt="CA Logo" class="site-logo" />
+      <span class="brand-name">Connyr Aungst</span>
     </div>
-    <a class="nav-item" href="#about">About</a>
-    <a class="nav-item" href="#certs">Certifications</a>
-    <div class="nav-item has-dropdown"><a href="#general">General Projects</a>
-      <div class="dropdown" id="generalMenu"></div>
-    </div>
-    <div class="nav-item has-dropdown"><a href="#security">Security Projects</a>
-      <div class="dropdown" id="securityMenu"></div>
-    </div>
-    <div class="nav-item has-dropdown"><a href="#contact">Contact</a>
-      <div class="dropdown">
-        <a href="mailto:you@connyraungst.com" target="_blank">Email</a>
-        <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a>
-      </div>
-    </div>
-  </nav>
-</header>
+    <nav class="site-nav" aria-label="Primary">
+      <ul>
+        <li><a href="#stats">Site Statistics</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li class="has-menu">
+          <a href="#general-projects">General Projects</a>
+          <ul class="dropdown" id="menu-general"></ul>
+        </li>
+        <li class="has-menu">
+          <a href="#security-projects">Security Projects</a>
+          <ul class="dropdown" id="menu-security"></ul>
+        </li>
+        <li class="has-menu">
+          <a href="#contact">Contact</a>
+          <ul class="dropdown">
+            <li><a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a></li>
+            <li><a href="https://github.com/caungst38" target="_blank" rel="noopener">GitHub</a></li>
+            <li><a href="mailto:you@connyraungst.com" target="_blank" rel="noopener">Email</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-
-<section id="hero" class="hero center">
-  <div class="hero-inner center">
-    <div class="hero-text">
+  <main>
+    <section class="hero" id="top">
       <h1>Cybersecurity Portfolio</h1>
-    </div>
-    <picture class="hero-headshot">
-      <source srcset="assets/images/headshot.webp" type="image/webp">
-      <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="eager">
-    </picture>
-    <div class="hero-text">
+      <picture>
+        <source srcset="assets/images/headshot.webp" type="image/webp">
+        <img id="hero-headshot" class="hero-headshot" src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" />
+      </picture>
       <h2 class="hero-name">Connyr Aungst</h2>
-      <p class="tagline">Blue/Red Team Ops – Cloud Security – Network Security – Incident Response</p>
-      <div class="hero-links">
-        <a class="btn" href="#general">View Projects</a>
-        <a class="btn outline" href="#stats">Site Statistics</a>
+      <p class="hero-subtitle">Blue/Red Team Ops – Cloud Security – Network Security – Incident Response</p>
+    </section>
+
+    <section id="stats" class="section">
+      <h2>Site Statistics</h2>
+      <div class="cards-grid">
+        <article class="card" id="card-browser"><h3>Browser</h3><p class="value">—</p></article>
+        <article class="card" id="card-device"><h3>Device</h3><p class="value">—</p></article>
+        <article class="card" id="card-https"><h3>Encryption</h3><p class="value">—</p></article>
+        <article class="card" id="card-headers"><h3>HTTP Security Headers</h3><p class="value small">—</p></article>
+        <article class="card" id="card-requests"><h3>Requests Served This Week</h3><p class="value">—</p></article>
+        <article class="card" id="card-waf"><h3>Blocked (WAF)</h3><p class="value">—</p></article>
+        <article class="card" id="card-lighthouse"><h3>Lighthouse</h3><p class="value">Connect Netlify API</p></article>
+        <article class="card" id="card-countries"><h3>Top Countries (30d)</h3><ol class="list"></ol></article>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
-<section class="chipbar">
+    <section id="about" class="section about-card">
+      <h2>About Me</h2>
+      <div class="about-split">
+        <img class="about-headshot" src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" />
+        <p class="about-text">
+          Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.
+        </p>
+      </div>
+    </section>
 
-  <button class="chip" data-filter="All">All</button>
-  <button class="chip" data-filter="Web">Web</button>
-  <button class="chip" data-filter="Cloud">Cloud</button>
-  <button class="chip" data-filter="Security — Offense">Security — Offense</button>
-  <button class="chip" data-filter="Security — Defense">Security — Defense</button>
-  <button class="chip" data-filter="Networking">Networking</button>
-  <button class="chip" data-filter="Scripting">Scripting</button>
-  <button class="chip" data-filter="Governance">Governance</button>
-  <button class="chip" data-filter="Tooling/DevOps">Tooling/DevOps</button>
-  <button class="chip" data-filter="Misc">Misc</button>
-</section>
-<main class="wrap">
+    <section id="general-projects" class="section">
+      <h2>General Projects</h2>
+      <div class="project-grid" id="general-grid"></div>
+    </section>
 
-  
-  <section id="stats" class="section">
-  <h2>Site Statistics</h2>
-  <div class="cards">
-    <article class="card">
-      <h3>Browser</h3>
-      <div id="uaInfo">—</div>
-      <small>Your browser & version</small>
-    </article>
-    <article class="card">
-      <h3>Device</h3>
-      <div id="deviceType">—</div>
-      <small>Desktop / Laptop / Mobile</small>
-    </article>
-    <article class="card">
-      <h3>HTTPS</h3>
-      <div id="httpsState">—</div>
-      <small>Encrypted connection</small>
-    </article>
-    <article class="card">
-      <h3>Security Headers</h3>
-      <div class="pill-list" id="secHeaders"></div>
-      <small>Best‑practice HTTP headers</small>
-    </article>
-    <article class="card">
-      <h3>Requests Served (7d)</h3>
-      <div id="reqs7d">—</div>
-      <small>Cloudflare totals</small>
-    </article>
-    <article class="card">
-      <h3>Blocked (WAF, 7d)</h3>
-      <div id="waf7d">—</div>
-      <small>Firewall blocks</small>
-    </article>
-    <article class="card">
-      <h3>Lighthouse</h3>
-      <div id="lighthouseScores">Connect Netlify API</div>
-      <small>Performance · Accessibility · Best Practices · SEO · PWA</small>
-    </article>
-    <article class="card">
-      <h3>Top Countries (30d)</h3>
-      <div id="topCountries">—</div>
-      <small>Visitors by country</small>
-    </article>
-  </div>
-</section>
-<section id="about" class="section">
-  <h2>About Me</h2>
-  <div class="about-card">
-    <picture class="about-photo">
-      <source srcset="assets/images/headshot.webp" type="image/webp">
-      <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="lazy">
-    </picture>
-    <div class="about-body">
-      <p>Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.</p>
-    </div>
-  </div>
-</section>
+    <section id="security-projects" class="section">
+      <h2>Security Projects</h2>
+      <div class="project-grid" id="security-grid"></div>
+    </section>
+  </main>
 
-
-
-  
-  
-
-
-  <section id="certs" class="section">
-    <h2>Certifications</h2>
-    <div id="certifications" class="grid"></div>
-  </section>
-
-  <section id="general" class="section">
-    <h2>General Projects</h2>
-    <div id="projects-general" class="grid"></div>
-    <div id="projects-general-error" class="error"></div>
-  </section>
-
-  <section id="security" class="section">
-    <h2>Security Projects</h2>
-    <div id="projects-security" class="grid"></div>
-  </section>
-
-  <footer id="contact" class="footer">
-    <p>© <span id="year"></span> Connyr Aungst · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · <a href="https://github.com/connyraungst" target="_blank" rel="noopener">GitHub</a></p>
+  <footer class="site-footer" id="contact">
+    <p>© 2025 Connyr Aungst · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · 
+      <a href="https://www.linkedin.com/in/connyr-aungst" target="_blank" rel="noopener">LinkedIn</a> · 
+      <a href="https://github.com/caungst38" target="_blank" rel="noopener">GitHub</a>
+    </p>
   </footer>
-</main>
 
-<div id="lightbox" class="lightbox" aria-hidden="true">
-  <button class="lightbox-close" aria-label="Close">×</button>
-  <img id="lightboxImage" alt="Project screenshot" src="" />
-  <div id="lightboxCaption" class="caption"></div>
-  <div class="lb-actions">
-    <a id="lightboxPdf" class="btn" href="#" target="_blank" rel="noopener" hidden>Download Summary PDF</a>
-    <a id="lightboxRepo" class="btn outline" href="#" target="_blank" rel="noopener" hidden>View Code</a>
-  </div>
-</div>
-
-<noscript>This site uses a little JavaScript to render cards and stats. Please enable JS.</noscript>
+  <script src="app.js"></script>
 </body>
 </html>
