--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
   <h2>About Me</h2>
   <div class="about-card">
     <picture class="about-photo">
-      <source srcset="assets/images/headshot.webp" type="image/webp">
-      <img src="assets/images/headshot.jpg" alt="Connyr Aungst headshot" loading="lazy">
-    </picture>
+  <source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp" />
+  <img src="assets/images/about-photo.png" alt="About photo" loading="lazy" class="rounded-2xl" />
+</picture>
     <div class="about-body">
       <p>Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.</p>
     </div>
