--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <section id="about" class="section">
   <h2>About Me</h2>
   <div class="about-card">
-    <picture class="about-photo" style="display:block;width:100%;height:100%;align-self:stretch;overflow:hidden;border-radius:16px;">
+    <picture class="about-photo" style="display:block;width:100%;aspect-ratio:16/9;max-height:clamp(260px,40vh,520px);overflow:hidden;border-radius:16px;">
   <source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp" />
   <img src="assets/images/about-photo.png" alt="About photo" loading="lazy" style="display:block;width:100%;height:100%;object-fit:cover;object-position:52% 50%;" />
 </picture>
