--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <section id="about" class="section">
   <h2>About Me</h2>
   <div class="about-card">
-    <picture class="about-photo" style="display:block;width:60%;max-width:640px;aspect-ratio:7/6;max-height:clamp(405px,62vh,810px);overflow:hidden;border-radius:16px;margin:0 auto 0 0;">
+    <picture class="about-photo" style="display:block;width:60%;max-width:640px;aspect-ratio:7/6;max-height:clamp(405px,62vh,810px);overflow:hidden;border-radius:16px;margin:0 clamp(16px,2.5vw,28px) 0 0;">
   <source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp" />
   <img src="assets/images/about-photo.png" alt="About photo" loading="lazy" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;" />
 </picture>
