--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 </section>
 <section id="about" class="section">
   <h2>About Me</h2>
-  <div class="about-card" style="display:grid;grid-template-columns:auto 1fr;gap:clamp(4px,0.6vw,10px);align-items:start;">
-    <picture class="about-photo" style="display:block;width:60%;max-width:640px;aspect-ratio:7/6;max-height:clamp(405px,62vh,810px);overflow:hidden;border-radius:16px;margin:0;">
+  <div class="about-card" style="display:grid;gap:clamp(6px,0.8vw,12px);align-items:start;">
+    <picture class="about-photo" style="display:block;width:100%;max-width:640px;aspect-ratio:7/6;max-height:clamp(405px,62vh,810px);overflow:hidden;border-radius:16px;margin:0;">
   <source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp" />
   <img src="assets/images/about-photo.png" alt="About photo" loading="lazy" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;" />
 </picture>
