Deploy v38.3.3 cleaned — General Projects duplicates removed

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 <h2>About Me</h2>
 <div class="about-card" style="display:grid;grid-template-columns:auto 1fr;gap:clamp(6px,0.8vw,12px);align-items:start;">
 <picture class="about-photo" style="display:block;width:clamp(312px,36%,384px);aspect-ratio:7/6;max-height:clamp(284px,43vh,567px);overflow:hidden;border-radius:16px;margin:0;">
-<source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp">
-<img alt="About photo" loading="lazy" src="assets/images/about-photo.png" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;">
-</img></source></picture>
+<source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp"/>
+<img alt="About photo" loading="lazy" src="assets/images/about-photo.png" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;"/>
+</picture>
 <div class="about-body">
 <p>Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.</p>
 </div>
@@ -134,9 +134,7 @@
 <h2>Certifications</h2>
 <div class="grid" id="certifications"></div>
 </section>
-<section class="section" id="general">
-<h2>General Projects</h2>
-<div class="grid" id="projects-general"><article class="card project" id="gen-card-0">
+<section class="section" id="general"><h2>General Projects</h2><div class="grid" id="projects-general"><article class="card project" id="gen-card-0">
 <div class="project-inner">
 <div class="project-image">
 <img alt="Portfolio Website (Netlify + Cloudflare) image" loading="lazy" src="./assets/images/projects/placeholder-project.webp"/>
@@ -158,9 +156,7 @@
 </div>
 <div class="project-tags"><span class="pill" style="background:#7bdff222;border-color:#7bdff244;color:#7bdff2">Hardware</span> <span class="pill" style="background:#b2f7ef22;border-color:#b2f7ef44;color:#b2f7ef">PC Build</span> <span class="pill" style="background:#eff7f622;border-color:#eff7f644;color:#eff7f6">Windows</span> <span class="pill" style="background:#f7d6e022;border-color:#f7d6e044;color:#f7d6e0">UEFI</span> <span class="pill" style="background:#f2b5d422;border-color:#f2b5d444;color:#f2b5d4">Secure Boot</span> <span class="pill" style="background:#cdb4db22;border-color:#cdb4db44;color:#cdb4db">TPM</span> <span class="pill" style="background:#ffc8dd22;border-color:#ffc8dd44;color:#ffc8dd">Misc</span></div>
 </div>
-</article></div>
-<div class="error" id="projects-general-error"></div>
-</section>
+</article></div><div class="error" id="projects-general-error"></div></section>
 <section class="section" id="security">
 <h2>Security Projects</h2>
 <div class="grid" id="projects-security"><article class="card project" id="sec-card-0">
